--- a/project/usmile/index.html
+++ b/project/usmile/index.html
@@ -169,7 +169,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/3.jpg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/3.JPG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -181,7 +181,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/4.jpg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/4.JPG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -193,7 +193,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/5.jpg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/5.JPG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -205,7 +205,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/6.jpg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/6.JPG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -217,7 +217,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/7.jpg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/7.JPG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -229,7 +229,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/8.jpeg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/8.JPEG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -241,7 +241,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/9.jpg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/9.JPG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -253,7 +253,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/10.jpg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/10.JPG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -265,7 +265,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/11.jpeg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/11.JPEG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -277,7 +277,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/12.jpg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/12.JPG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -289,7 +289,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/13.jpeg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/13.JPEG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -301,7 +301,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/14.jpeg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/14.JPEG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -313,7 +313,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/15.jpeg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/15.JPEG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -325,7 +325,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/16.jpeg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/16.JPEG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -337,7 +337,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/17.jpeg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/17.JPEG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -349,7 +349,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/18.jpg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/18.JPG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -373,7 +373,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/20.jpeg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/20.JPEG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -397,7 +397,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/22.jpg" alt=""></div>
+							<div class="result__img"><img src="img/content/review/22.JPG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -426,7 +426,7 @@
 			<ul class="service__box">
 				<li class="service__item">
 					<a href="#" class="service__btn">
-						<div class="service__img"><img src="img/content/service/1.jpg" alt=""></div>
+						<div class="service__img"><img src="img/content/service/1.JPG" alt=""></div>
 						<h4 class="service__title">Лечение зубов</h4>
 					</a>
 				</li>
