--- a/project/usmile/index.html
+++ b/project/usmile/index.html
@@ -361,7 +361,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/19.png" alt=""></div>
+							<div class="result__img"><img src="img/content/review/19.PNG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -385,7 +385,7 @@
 					</div>
 					<div class="result-slider__item">
 						<div class="result__block-review">
-							<div class="result__img"><img src="img/content/review/21.png" alt=""></div>
+							<div class="result__img"><img src="img/content/review/21.PNG" alt=""></div>
 							<div class="result__content">
 								<p class="result__title">Отзыв пациента:</p>
 								<p class="result__review">
@@ -426,7 +426,7 @@
 			<ul class="service__box">
 				<li class="service__item">
 					<a href="#" class="service__btn">
-						<div class="service__img"><img src="img/content/service/1.JPG" alt=""></div>
+						<div class="service__img"><img src="img/content/service/1.jpg" alt=""></div>
 						<h4 class="service__title">Лечение зубов</h4>
 					</a>
 				</li>
