--- a/project/usmile(v2)/index.html
+++ b/project/usmile(v2)/index.html
@@ -9,7 +9,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<title>Usmile</title>
 	<meta name="description" content="Выводимое описании при выводе в поисковике вашего сайта"> 
 	<!-- ключевые слова для поисковиков (за частую поисковики начали пропускать этот прометр) -->
   <!-- <meta name="Keywords" content="HTML, META, метатег, тег, поисковая система">  -->
