--- a/project/usmile(v2)/index.html
+++ b/project/usmile(v2)/index.html
@@ -160,9 +160,12 @@
 				</li>
 			</ul>
 			<div class="head__sign-wrap">
-				<a href="#" class="head__sign sign-up btn">Записаться на консультацию
-					<span>и получить подарок <span>за 990 руб.</span></span>
-				</a>
+				<div class="head__sign-subs">
+					<a href="#" class="head__sign sign-up btn">Записаться на консультацию
+						<span>и получить подарок </span>
+					</a>
+					<p>Стоимость консультации 990 руб.</p>
+				</div>
 				<div class="head__sign-bonus">
 					<div class="head__sign-b-img"><img src="img/fons/gift.png" alt=""></div>
 					<p><span><span>+ </span>20%</span>скидка на выбранный план лечения</p>
