--- a/project/usmile(v2)/index.html
+++ b/project/usmile(v2)/index.html
@@ -266,7 +266,7 @@
 				</div>
 				<div class="whyWe__reson">
 					<div class="whyWe__img"><img src="img/content/whyWe/3.png" alt=""></div>
-					<h4 class="whyWe__title">СТРАХОВАНИЕ</h4>
+					<h4 class="whyWe__title">Лечение по ДМС</h4>
 					<p class="whyWe__desc">Вам доступно лечение
 						с нашим партнёром</p>
 					<div class="whyWe__ico">
