--- a/project/usmile(v2)/index.html
+++ b/project/usmile(v2)/index.html
@@ -852,6 +852,9 @@
 				<img src="img/logo-white.png" alt="">
 			</a>
 			<a href="#" class="footer__politics">Политика конфиденциальности</a>
+		  <a href="#" class="footer__wtp">
+				Напишите нам в WhatsApp <img src="img/icon/wat.png" alt="">
+			</a>
 			<div class="footer__contact contant-h">
 				<a href="tel:+79775990858" class="num">+7 (977) 599-08-58</a>
 				<a href="#" class="call-me btn">ПЕРЕЗВОНИТЕ  МНЕ</a>
