--- a/project/usmile(v2)/index.html
+++ b/project/usmile(v2)/index.html
@@ -662,6 +662,7 @@
 				</div>
 			</div>
 			<a href="#" class="sign-up btn">ЗАПИСАТЬСЯ НА КОНСУЛЬТАЦИЮ</a>
+			<h2 class="h2">Отзывы</h2>
 			<div class="result-com-slider-wrap">
 				<div class="result-com-slider">
 					<div class="result-slider__item">
