--- a/project/usmile(v2)/index.html
+++ b/project/usmile(v2)/index.html
@@ -267,7 +267,7 @@
 				<div class="whyWe__reson">
 					<div class="whyWe__img"><img src="img/content/whyWe/3.png" alt=""></div>
 					<h4 class="whyWe__title">Лечение по ДМС</h4>
-					<p class="whyWe__desc">Наши партнёры и их логотипы</p>
+					<p class="whyWe__desc">Наши партнёры</p>
 					<div class="whyWe__ico">
 						<img src="img/content/whyWe/4.png" alt="">
 					</div>
