--- a/project/usmile(v2)/index.html
+++ b/project/usmile(v2)/index.html
@@ -42,7 +42,7 @@
 			</a>
 			<div class="header__contact contant-h">
 				<a href="tel:+79775990858" class="num">+7 (977) 599-08-58</a>
-				<a href="#" class="call-me btn">ПЕРЕЗВОНИТЕ  МНЕ</a>
+				<a href="#" class="call-me btn">Перезвоните мне</a>
 			</div>
 		</div>
 		<nav class="menu-wrap">
