--- a/project/usmile(v2)/index.html
+++ b/project/usmile(v2)/index.html
@@ -723,7 +723,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="#" class="sign-up btn">ЗАПИСАТЬСЯ НА КОНСУЛЬТАЦИЮ</a>
+			<a href="#" class="sign-up btn">Записаться на консультацию</a>
 			<h2 class="h2">Отзывы</h2>
 			<div class="result-com-slider-wrap">
 				<div class="result-com-slider">
@@ -842,7 +842,7 @@
 				<p class="contact__title">Телефон</p>
 				<a href="tel:+79775990858"  class="contact__num">+7 (977) 599-08-58</a>
 				<h6 class="contact__text-min">Ежедневно, с 09:00 до 21:00</h6>
-				<a href="#" class="sign-up btn">ЗАПИСАТЬСЯ НА КОНСУЛЬТАЦИЮ</a>
+				<a href="#" class="sign-up btn">Записаться на консультацию</a>
 			</div>
 		</div>
 	
