--- a/project/usmile(v2)/index.html
+++ b/project/usmile(v2)/index.html
@@ -749,6 +749,275 @@
 							</div>
 						</div>
 					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Большая благодарность доктору Виктории. Ребенку 4 года, требуется подход, она смогла подружиться с ребенком за 2 приема и ребенок спокойно отсидел лечение! Профессионал ! Спасибо большое)
+								</p>
+								<p class="result__name"> <span class="result__review">Роза Тер-Абрамян</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Обратился в стоматологию Usmile c фантомной болью (так мне думалось). Мне казалось, что болела сразу половина челюсти, но внешних признаков повреждения не было. Проблему выявил сделанный снимок. Оказалось, что в корне одного из зубов была трещина, которая и вызывала непонятную...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Игорь</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Лечила в стоматологии Usmile 2 зуба. Один зуб вылечили быстро, а вот насчет второго доктор засомневался и отправил на рентген. Оказалось, что у этого зуба было 2 корня и вокруг второго было небольшое воспаление. В итоге его лечение немного затянулось, но результат порадовал....
+
+								</p>
+								<p class="result__name"> <span class="result__review">Таня</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Так получилось, что я пришла в стоматологию Usmile уже будучи беременной. Зуб болел сильно, но внешних признаков заболевания при визуальном осмотре обнаружено не было. Боялась, что отправят меня на рентген, но оказалось, что у них есть специальный аппарат diagnocam, который...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Елена</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									В стоматологию Usmile я пришел с огромным флюсом и раздувшейся щекой. Даже рот открывать больно было. Думал, что сейчас мне его удалят и все прочистят. Однако, все получилось не так, как я хотел. Сначала мне порекомендовали вылечить флюс. Для этого поставили обезболивающее,...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Иван Петрович
+								</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Честно говоря, поначалу боялась ставить имплант. Страшно было и от того, что вкручивают его в кость и от того, что он может не прижиться. Боялась боли, но оказалось зря. Во время установки импланта провели обезболивание. Было не только не больно, но даже немного щекотно. После...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Анастасия</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Огромное спасибо Марии Сергеевне за ее трепетное отношение, понимание и мастерство! Созрела до брекетов только в 36 лет, раньше долго колебалась, одевать брекеты или нет, хотя доктора рекомендовали. Но останавливала перспектива ношения на зубах некрасивых железок. Но вот...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Пациент</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Обратилась я в стоматологию Usmile за услугой протезирования зубов. Дело в том, что мои коренные зубы с правой стороны давно погрыз кариес и восстанавливать их не было смысла, поэтому просто попросила удалить. Однако, оказалось, что жить без них не очень просто, десна...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Ираида</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Всегда стеснялась своего естественного цвета зубов. Он не белый, а слегка желтоватый. Полностью отбелить его сложно, даже дорогие зубные пасты не помогали. Поэтому, чтобы решить проблему, я обратилась за услугой профессионального отбеливания в стоматологию Usmile. Сама процедура...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Ирина</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Так получилось, что у меня между передними зубами образовалась небольшая щель. Долго ее стеснялась и старалась улыбаться меньше, чтобы не было видно. Друзья посоветовали обратиться в стоматологию Usmile, сказали, что там лечат хорошо и недорого. Честно говоря, очень не хотелось...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Елена</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Хочу поделиться опытом имплантации зубов. Дело в том, что 2 коренных зуба я удалила давно, но все никак не могла решиться на протезирование. В итоге пришла в стоматологическую клинику Usmile только через 5 лет после удаления. Думала, что откажут, но доктор Аскеров отнесся...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Ольга</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									На протяжении многих лет я к обращаюсь всегда стоматологу-хирургу Багдасарову Баграту Артуровичу! Удалял мне зубы мудрости и имплантировал 1 зуб. Я всегда остаюсь довольна качеством работы доктора и всегда спокойно прихожу к нему на столь неприятные процедуры. Во время процесса...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Светлана</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Лечился у Альбины Руслановны неоднократно, ставил пломбы и удалял нерв в зубе. Перед лечением мне объяснили, какие зубы требуют лечения, составили план со стоимостью. Все прошло хорошо, безболезненно. Внешне не отличить от своих зубов. Боли после лечения нет. Рекомендую...
+								</p>
+								<p class="result__name"> <span class="result__review">Пациент</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									У этого доктора лечились мои дети: 7 лет и 13 лет. Скученное положение зубов исправили полностью (пластинки и брекеты соответственно), прогресс бытсрый, контакт с детьми хороший. Внимательное отношение, нет «вымогания» денег — стоимость лечения четко была озвучена в самом...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Семья Цветковых
+								</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Хоть и молодой, но очень талантливый специалист. В клинику пришла со множеством вопросов по поводу установки зубного протеза. Доктор Цицкишвили В.Т. очень внимательно со мной обошелся, выслушал все пожелания. Мне даже показалось, что он лучше знает, чего я хочу, чем я сама....
+
+								</p>
+								<p class="result__name"> <span class="result__review">Алина Л.
+								</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Еще до начала лечения обсуждаем с Альбиной Руслановной, как будет проходить процесс и какие конкретно манипуляции будут проводиться. Мне нравится у Хакуновой лечиться, она аккуратная, всегда в хорошем настроении принимает и старается свести все неприятные ощущения к минимуму. В...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Пациент</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Сакинат дельная пародонтолог. Получилось у нее подлечить мою болячку. Низкий поклон Сакинат Идрисовна!
+
+								</p>
+								<p class="result__name"> <span class="result__review">Патвакан</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Отличный врач! Рекомендую. Всегда хожу к Багдасарову на приём. Профессионал своего дела! Столько терпения и внимания к пациентам! Иду на приём, не боюсь, уверена, что всё сделает как нужно. Рекомендую всем знакомым, убедитесь, что этот врач любит свою работу. Огромное спасибо,...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Пациент</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Разработчики нужны всегда, и если вы не относитесь к числу фрилансеров, работающих только удаленно, а также над специальными или индивидуальными проектами, то для многих путь в софтверную компанию выглядит так: переезд в крупный город с развитой ИТ-экспертизой, подача резюме в...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Мартыновская Ольга
+								</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Всего было предложено пять задач от разных компаний. Мы сосредоточились на задаче «Газпромнефти»: прогнозирование спроса на топливо со стороны В2В-клиентов. Нужно было по обезличенным данным — регион приобретения топлива, номер заправки, вид топлива, цена, дата и ID-клиента —...
+
+								</p>
+								<p class="result__name"> <span class="result__review">Герасимов Максим
+								</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Американский продавец отказался отправлять деталь в Канаду, поэтому Покора договорился со своим приятелем Джастином Мэем, который жил в Уилмингтоне. Оба парня ярые геймеры увлекались взломом Xbox. Хотя они чатились и сотрудничали много лет, но никогда не встречались лично....
+
+								</p>
+								<p class="result__name"> <span class="result__review">Фроськина Анастасия
+								</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Хотя они чатились и сотрудничали много лет, но никогда не встречались лично. Покора планировал восьмичасовую поездку в пятницу, чтобы спокойно поужинать с Мэем, а затем привезти металлический синий бампер домой в Миссиссогу, штат Онтарио, той ночью или рано утром следующего дня....
+
+								</p>
+								<p class="result__name"> <span class="result__review">Жумлова Вика
+								</span></p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="result-com-slider-dop slider-wrap-dop">
 					<div class="result-com-slider-dots slider-dots">
