--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
+<!-- 
+  Was made by Pagas15
+  My site - https://pagas15.github.io
+-->
+
+
 <!DOCTYPE html>
 <html lang="ru">
 
 <head>
-	
 	<meta charset="UTF-8">
-
 	<title>Anton Klymko</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
+	<meta name="description" content="Front-end developer, создаю одностраничные и многостраничные сайты, посадочные страницы, экспериментирую с вёрсткой и анимацией, создаю разной сложности функциональные скрипты"> 
+	<!-- ключевые слова для поисковиков (за частую поисковики начали пропускать этот прометр) -->
+  <!-- <meta name="Keywords" content="HTML, META, метатег, тег, поисковая система">  -->
 
 	<meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.min.css">
 
 	<base target="_blank">
-
 </head>
 
 <body>
@@ -27,12 +29,12 @@
 				<div class="hr"></div>
 				<nav class="nav-bar-link">
 					<ul class="social">
-						<li><a href="https://t.me/pagas15"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
-						<li><a href="https://www.instagram.com/pagas15/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-						<li><a href="https://www.facebook.com/anton.klymko"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><span id="tooptip" tooltip="Кликните чтобы скопировать мою электронную почту в буфер обмена"><a class="email" href="mailto:ghbdtn1104202@gmail.com" target="_self" data-clipboard-text="ghbdtn1104202@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></span></li>
-						<li><a href="https://vk.com/anton_klymko.pagas15"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/pagas15/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+						<li><a href="https://t.me/pagas15"><i class="fab fa-telegram-plane"></i></a></li>
+						<li><a href="https://www.instagram.com/pagas15/"><i class="fab fa-instagram"></i></a></li>
+						<li><a href="https://www.facebook.com/anton.klymko"><i class="fab fa-facebook-f"></i></a></li>
+						<li><span id="tooptip" tooltip="Кликните чтобы скопировать мою электронную почту в буфер обмена"><a class="email" href="mailto:ghbdtn1104202@gmail.com" target="_self" data-clipboard-text="ghbdtn1104202@gmail.com"><i class="fas fa-envelope"></i></a></span></li>
+						<li><a href="https://vk.com/anton_klymko.pagas15"><i class="fab fa-vk"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/pagas15/"><i class="fab fa-linkedin-in"></i></a></li>
 					</ul>
 				</nav>
 			</div>
@@ -53,7 +55,7 @@
 					<div class="services-list__item cart">
 						<div class="cart__face cart__face1">
 							<div class="cart__content">
-								<div class="cart__icon"><i class="fa fa-code" aria-hidden="true"></i></div>
+								<div class="cart__icon"><i class="fas fa-code"></i></div>
 								<h3>Верстка</h3>
 							</div>
 						</div>
@@ -66,7 +68,7 @@
 					<div class="services-list__item cart">
 						<div class="cart__face cart__face1">
 							<div class="cart__content">
-								<div class="cart__icon"><i class="fa fa-window-restore" aria-hidden="true"></i></div>
+								<div class="cart__icon"><i class="far fa-window-restore"></i></div>
 								<h3>Адаптивность</h3>
 							</div>
 						</div>
@@ -79,7 +81,7 @@
 					<div class="services-list__item cart">
 						<div class="cart__face cart__face1">
 							<div class="cart__content">
-								<div class="cart__icon"><i class="fa fa-spinner" aria-hidden="true"></i></div>
+								<div class="cart__icon cart__icon--optimization"><i class="fas fa-spinner"></i></div>
 								<h3>Оптимизация</h3>
 							</div>
 						</div>
@@ -126,18 +128,19 @@
 			<div class="footer-wrap">
 				<nav class="nav-bar-link">
 					<ul class="social">
-						<li><a href="https://t.me/pagas15"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
-						<li><a href="https://www.instagram.com/pagas15/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-						<li><a href="https://www.facebook.com/anton.klymko"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><span id="tooptip" tooltip="Кликните чтобы скопировать мою электронную почту в буфер обмена"><a class="email" href="mailto:ghbdtn1104202@gmail.com" target="_self" data-clipboard-text="ghbdtn1104202@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></span></li>
-						<li><a href="https://vk.com/anton_klymko.pagas15"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/pagas15/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+						<li><a href="https://t.me/pagas15"><i class="fab fa-telegram-plane"></i></a></li>
+						<li><a href="https://www.instagram.com/pagas15/"><i class="fab fa-instagram"></i></a></li>
+						<li><a href="https://www.facebook.com/anton.klymko"><i class="fab fa-facebook-f"></i></a></li>
+						<li><span id="tooptip" tooltip="Кликните чтобы скопировать мою электронную почту в буфер обмена"><a class="email" href="mailto:ghbdtn1104202@gmail.com" target="_self" data-clipboard-text="ghbdtn1104202@gmail.com"><i class="fas fa-envelope"></i></a></span></li>
+						<li><a href="https://vk.com/anton_klymko.pagas15"><i class="fab fa-vk"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/pagas15/"><i class="fab fa-linkedin-in"></i></a></li>
 					</ul>
 				</nav>
 			</div>
 		</div>
 	</footer>
-	<script type="text/javascript" src="js/clipboard.min.js"></script>
+	<!-- <script type="text/javascript" src="js/clipboard.min.js"></script> -->
 	<script type="text/javascript" src="js/scripts.min.js"></script>
+	<!-- <script type="text/javascript" src="js/main.js"></script> -->
 </body>
 </html>
