--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
 <head>
 	<meta charset="UTF-8">
+
 	<title>Anton Klymko</title>
+	
+	<link rel="icon" type="image/png" sizes="48x48" href="./img/favicon/icon-482.png">
+	<link rel="icon" type="image/png" sizes="140x140" href="./img/favicon/icon-1402.png">
+
+
 	<meta name="description" content="Front-end developer, создаю одностраничные и многостраничные сайты, посадочные страницы, экспериментирую с вёрсткой и анимацией, создаю разной сложности функциональные скрипты"> 
 	<!-- ключевые слова для поисковиков (за частую поисковики начали пропускать этот прометр) -->
   <!-- <meta name="Keywords" content="HTML, META, метатег, тег, поисковая система">  -->
