--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- <meta name="Keywords" content="HTML, META, метатег, тег, поисковая система">  -->
 
 	<meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/styles.min.css">
+	<link rel="stylesheet" media="all" href="css/styles.min.css">
 
 	<base target="_blank">
 </head>
