--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		</div>
 	</footer>
 	<!-- <script type="text/javascript" src="js/clipboard.min.js"></script> -->
-	<script type="text/javascript" src="js/scripts.min.js"></script>
+	<script type="text/javascript" async src="js/scripts.min.js"></script>
 	<!-- <script type="text/javascript" src="js/main.js"></script> -->
 </body>
 </html>
