--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- <meta name="Keywords" content="HTML, META, метатег, тег, поисковая система">  -->
 
 	<meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" media="all" href="css/styles.min.css">
+	<link media="none" onload="if(media!='all') media='all'" rel="stylesheet" type="text/css", href= main.css>
 
 	<base target="_blank">
 </head>
@@ -145,8 +145,6 @@
 			</div>
 		</div>
 	</footer>
-	<!-- <script type="text/javascript" src="js/clipboard.min.js"></script> -->
 	<script type="text/javascript" async src="js/scripts.min.js"></script>
-	<!-- <script type="text/javascript" src="js/main.js"></script> -->
 </body>
 </html>
