--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- <meta name="Keywords" content="HTML, META, метатег, тег, поисковая система">  -->
 
 	<meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no">
-	<link media="none" onload="if(media!='all') media='all'" rel="stylesheet" type="text/css", href= main.css>
+	<link media="none" onload='if(media!="all") media="all"' rel="stylesheet" type="text/css", href= main.css>
 
 	<base target="_blank">
 </head>
