--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
 			</div>
 		</div>
 	</footer>
-	<script type="text/javascript" async src="js/scripts.min.js"></script>
+	<script type="text/javascript" src="js/scripts.min.js"></script>
 </body>
 </html>
