--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!-- <meta name="Keywords" content="HTML, META, метатег, тег, поисковая система">  -->
 
 	<meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no">
+	<link media="all" rel="stylesheet" type="text/css", href="css/head.min.css">
 	<link media="none" onload='if(media!="all") media="all"' rel="stylesheet" type="text/css", href="css/styles.min.css">
 
 	<base target="_blank">
