--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						</div>
 						<div class="cart__face cart__face2">
 							<div class="cart__content">
-								<p>Пишу разные скрипты на js, к примеру таймеров, модальных окон и тд(и больше, а это простой пример)</p>
+								<p>Пишу разные скрипты на js, к примеру таймеров, калькуляторов, масок для форм и тд</p>
 							</div>
 						</div>
 					</div>
