--- a/project/test/mainNoLog.html
+++ b/project/test/mainNoLog.html
@@ -157,8 +157,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="nav-bar__login-btn">
-					<div class="nav-bar__login-btn-action nav-bar__btn">
+				<div class="nav-bar__login-btn nav-bar__btn">
+					<div class="nav-bar__login-btn-action">
 
 					</div>
 					<div class="nav-bar__login-btn-content">
