--- a/project/test/mainNoLog.html
+++ b/project/test/mainNoLog.html
@@ -158,7 +158,7 @@
 					</div>
 				</div>
 				<div class="nav-bar__login-btn nav-bar__btn">
-					<div class="nav-bar__login-btn-action">
+					<div class="nav-bar__login-btn-actio nav-bar__login-btn-logIn">
 
 					</div>
 					<div class="nav-bar__login-btn-content">
