--- a/project/test/mainNoLog.html
+++ b/project/test/mainNoLog.html
@@ -462,6 +462,7 @@
 								</div>
 								<span class="curs-point-s">Принять условия</span>
 							</div>
+							<p></p>
 						</div>
 						<div class="topay-block__right">
 							<div class="popup-wind__top-content">
@@ -503,7 +504,7 @@
 				</ul>
 				<ul>
 					<li>
-						<a href="#" id="navConditions" class="curs-point">Положения и условия</a>
+						<a href="#" id="navCondda" class="curs-point">Положения и условия</a>
 					</li>
 					<li>
 						<a href="#" id="navPolitic" class="curs-point">Политика конфиденциальности</a>
